syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package gateway;

service Gateway {
    rpc ReceiveSendData (SendDataRequest) returns (SendDataResponse){}
}

message SendDataRequest {
    string token = 1;
    bytes data = 2;
}

message SendDataResponse {
    string status = 1;
}